--- a/frontend/admin/queries.html
+++ b/frontend/admin/queries.html
@@ -89,6 +89,13 @@
 
         
       </nav>
+ <a
+        href="../index.html"
+        class="flex items-center space-x-4 p-4 text-slate-500 hover:text-red-400 transition-all border-t border-slate-800"
+      >
+        <i class="fas fa-sign-out-alt"></i>
+        <span class="font-bold text-sm">Logout Console</span>
+      </a>
     </aside>
 
     <main class="flex-1 p-12 overflow-y-auto custom-scrollbar">
