--- a/frontend/product-details.html
+++ b/frontend/product-details.html
@@ -32,49 +32,60 @@
       .spec-row:nth-child(even) {
         background-color: #f8fafc;
       }
+
+      /* Mobile optimization for the sticky image */
+      @media (max-width: 1024px) {
+        .mobile-static {
+          position: static !important;
+          min-height: auto !important;
+          height: 350px !important;
+        }
+      }
     </style>
   </head>
   <body class="bg-slate-50 font-sans custom-scrollbar overflow-x-hidden">
     <nav
-      class="bg-white/90 backdrop-blur-xl border-b sticky top-0 z-[100] px-6 py-4 flex justify-between items-center shadow-sm"
+      class="bg-white/90 backdrop-blur-xl border-b sticky top-0 z-[100] px-4 md:px-6 py-4 flex justify-between items-center shadow-sm"
     >
       <button
         onclick="location.href = 'shop.html'"
-        class="flex items-center space-x-3 group"
+        class="flex items-center space-x-2 md:space-x-3 group"
       >
         <div
           class="p-2 rounded-full bg-slate-100 group-hover:bg-orange-500 group-hover:text-white transition-all"
         >
-          <i class="fas fa-arrow-left text-xs"></i>
+          <i class="fas fa-arrow-left text-[10px]"></i>
         </div>
         <span
-          class="text-[10px] font-black uppercase tracking-widest text-blue-900"
-          >Back to Shop</span
+          class="text-[9px] md:text-[10px] font-black uppercase tracking-widest text-blue-900"
+          >Back</span
         >
       </button>
+
       <div
         class="flex flex-col items-center cursor-pointer"
         onclick="location.href = 'index.html'"
       >
         <span
-          class="text-xl font-black text-blue-900 tracking-tighter uppercase leading-none"
+          class="text-lg md:text-xl font-black text-blue-900 tracking-tighter uppercase leading-none"
           >Mishra</span
         >
         <span
-          class="text-[8px] font-bold text-orange-500 tracking-[0.4em] uppercase"
+          class="text-[7px] md:text-[8px] font-bold text-orange-500 tracking-[0.4em] uppercase"
           >Industries</span
         >
       </div>
+
       <div
         class="relative cursor-pointer group"
         onclick="location.href = 'cart.html'"
       >
         <i
-          class="fas fa-shopping-basket text-xl text-blue-900 group-hover:text-orange-500 transition-colors"
+          class="fas fa-shopping-basket text-lg md:text-xl text-blue-900 group-hover:text-orange-500 transition-colors"
         ></i>
         <span
           id="cartCount"
-          class="absolute -top-2 -right-2 bg-orange-500 text-white text-[9px] w-4 h-4 rounded-full flex items-center justify-center font-bold"
+          class="absolute -top-2 -right-2 bg-orange-500 text-white text-[8px] w-4 h-4 rounded-full flex items-center justify-center font-bold"
           >0</span
         >
       </div>
@@ -82,7 +93,7 @@
 
     <div
       id="cartToast"
-      class="fixed top-24 right-6 z-[1000] opacity-0 pointer-events-none translate-x-10 transition-all duration-500"
+      class="fixed top-20 md:top-24 right-4 md:right-6 z-[1000] opacity-0 pointer-events-none translate-x-10 transition-all duration-500"
     >
       <div
         class="bg-white rounded-2xl shadow-2xl border border-slate-100 p-4 flex items-center space-x-4"
@@ -108,25 +119,25 @@
       </div>
     </div>
 
-    <main class="container mx-auto px-4 md:px-10 py-12">
+    <main class="container mx-auto px-4 md:px-10 py-6 md:py-12">
       <div
         id="productHero"
-        class="flex flex-col lg:flex-row gap-12 mb-16 animate__animated animate__fadeIn"
+        class="flex flex-col lg:flex-row gap-8 md:gap-12 mb-12 md:mb-16 animate__animated animate__fadeIn"
       >
         <div class="lg:w-5/12">
           <div
-            class="bg-white rounded-[2.5rem] border border-slate-100 p-8 sticky top-32 shadow-sm flex items-center justify-center min-h-[500px] overflow-hidden group"
+            class="bg-white rounded-[1.5rem] md:rounded-[2.5rem] border border-slate-100 p-6 md:p-8 sticky top-32 shadow-sm flex items-center justify-center min-h-[350px] md:min-h-[500px] overflow-hidden group mobile-static"
           >
             <div
               id="discountBadge"
-              class="hidden absolute top-8 left-8 bg-red-600 text-white text-[10px] font-black px-4 py-1.5 rounded-full z-10 shadow-lg"
+              class="hidden absolute top-4 left-4 md:top-8 md:left-8 bg-red-600 text-white text-[9px] md:text-[10px] font-black px-3 md:px-4 py-1.5 rounded-full z-10 shadow-lg"
             >
               0% OFF
             </div>
             <img
               id="productImage"
               src=""
-              class="max-h-[450px] w-auto object-contain transition-transform duration-700 group-hover:scale-105"
+              class="max-h-[300px] md:max-h-[450px] w-auto object-contain transition-transform duration-700 group-hover:scale-105"
               alt="Product Image"
             />
           </div>
@@ -135,92 +146,105 @@
         <div class="lg:w-7/12">
           <p
             id="breadcrumbCategory"
-            class="text-orange-500 text-[10px] font-black uppercase tracking-[0.2em] mb-2"
+            class="text-orange-500 text-[9px] md:text-[10px] font-black uppercase tracking-[0.2em] mb-2"
           ></p>
           <h1
             id="productName"
-            class="text-3xl md:text-5xl font-black text-blue-900 leading-tight mb-4"
+            class="text-2xl md:text-5xl font-black text-blue-900 leading-tight mb-4"
           ></h1>
 
-          <div class="flex items-center space-x-3 mb-6">
+          <div class="flex flex-wrap items-center gap-3 mb-6">
             <div
               id="stockStatus"
-              class="flex items-center text-[10px] font-black uppercase tracking-widest px-3 py-1 rounded-md"
+              class="flex items-center text-[9px] md:text-[10px] font-black uppercase tracking-widest px-3 py-1 rounded-md"
             ></div>
             <span
-              class="text-slate-400 text-[10px] font-bold uppercase tracking-widest border-l pl-3"
+              class="text-slate-400 text-[9px] md:text-[10px] font-bold uppercase tracking-widest border-l border-slate-200 pl-3"
               >Certified Quality</span
             >
           </div>
 
           <div
-            class="bg-white rounded-3xl border border-slate-100 p-8 mb-8 shadow-sm"
+            class="bg-white rounded-2xl md:rounded-3xl border border-slate-100 p-6 md:p-8 mb-8 shadow-sm"
           >
             <div class="flex items-baseline space-x-3 mb-6">
               <span
                 id="productPrice"
-                class="text-4xl font-black text-blue-900"
+                class="text-3xl md:text-4xl font-black text-blue-900"
               ></span>
               <span
                 id="originalPrice"
-                class="text-xl text-blue-900 line-through font-bold hidden"
+                class="text-lg md:text-xl text-blue-900 line-through font-bold hidden"
               ></span>
             </div>
 
-            <div class="flex items-center gap-4">
+            <div
+              class="flex flex-col sm:flex-row items-stretch sm:items-center gap-4"
+            >
               <div
-                class="flex items-center border border-slate-200 rounded-xl p-1 bg-white"
+                class="flex items-center justify-between border border-slate-200 rounded-xl p-1 bg-white"
               >
                 <button
                   onclick="updateQty(-1)"
                   class="w-10 h-10 flex items-center justify-center hover:bg-slate-50 rounded-lg text-blue-900"
                 >
-                  <i class="fas fa-minus"></i>
+                  <i class="fas fa-minus text-xs"></i>
                 </button>
                 <span
                   id="quantityDisplay"
-                  class="w-12 text-center font-black text-blue-900"
+                  class="px-4 text-center font-black text-blue-900"
                   >1</span
                 >
                 <button
                   onclick="updateQty(1)"
                   class="w-10 h-10 flex items-center justify-center hover:bg-slate-50 rounded-lg text-blue-900"
                 >
-                  <i class="fas fa-plus"></i>
+                  <i class="fas fa-plus text-xs"></i>
                 </button>
               </div>
               <button
                 id="addToCartBtn"
-                class="flex-grow bg-[#1e3a8a] text-white py-4 rounded-xl font-black uppercase tracking-widest hover:bg-orange-500 transition-all shadow-xl flex items-center justify-center space-x-3"
+                class="flex-grow bg-[#1e3a8a] text-white py-4 rounded-xl font-black uppercase tracking-widest hover:bg-orange-500 transition-all shadow-xl flex items-center justify-center space-x-3 text-sm md:text-base"
               >
-                <i class="fas fa-cart-plus"></i>
-                <span>Add to Cart</span>
+                <i class="fas fa-cart-plus"></i> <span>Add to Cart</span>
               </button>
             </div>
           </div>
 
-          <div class="grid grid-cols-3 gap-3">
+          <div class="grid grid-cols-3 gap-2 md:gap-3">
             <div
-              class="p-4 bg-white rounded-xl border border-slate-100 flex flex-col items-center text-center"
+              class="p-3 md:p-4 bg-white rounded-xl border border-slate-100 flex flex-col items-center text-center"
             >
-              <i class="fas fa-check-circle text-green-500 mb-2"></i>
-              <p class="text-[8px] font-black text-blue-900 uppercase">
+              <i
+                class="fas fa-check-circle text-green-500 mb-2 text-xs md:text-base"
+              ></i>
+              <p
+                class="text-[7px] md:text-[8px] font-black text-blue-900 uppercase"
+              >
                 100% Genuine
               </p>
             </div>
             <div
-              class="p-4 bg-white rounded-xl border border-slate-100 flex flex-col items-center text-center"
+              class="p-3 md:p-4 bg-white rounded-xl border border-slate-100 flex flex-col items-center text-center"
             >
-              <i class="fas fa-tools text-blue-500 mb-2"></i>
-              <p class="text-[8px] font-black text-blue-900 uppercase">
+              <i
+                class="fas fa-tools text-blue-500 mb-2 text-xs md:text-base"
+              ></i>
+              <p
+                class="text-[7px] md:text-[8px] font-black text-blue-900 uppercase"
+              >
                 Tech Support
               </p>
             </div>
             <div
-              class="p-4 bg-white rounded-xl border border-slate-100 flex flex-col items-center text-center"
+              class="p-3 md:p-4 bg-white rounded-xl border border-slate-100 flex flex-col items-center text-center"
             >
-              <i class="fas fa-sync text-orange-500 mb-2"></i>
-              <p class="text-[8px] font-black text-blue-900 uppercase">
+              <i
+                class="fas fa-sync text-orange-500 mb-2 text-xs md:text-base"
+              ></i>
+              <p
+                class="text-[7px] md:text-[8px] font-black text-blue-900 uppercase"
+              >
                 Easy Returns
               </p>
             </div>
@@ -228,14 +252,14 @@
         </div>
       </div>
 
-      <div class="grid lg:grid-cols-3 gap-12 mb-20">
+      <div class="grid lg:grid-cols-3 gap-8 md:gap-12 mb-16 md:mb-20">
         <div class="lg:col-span-2">
           <div
-            class="bg-white rounded-[2rem] border border-slate-100 p-10 shadow-sm h-full"
+            class="bg-white rounded-2xl md:rounded-[2rem] border border-slate-100 p-6 md:p-10 shadow-sm h-full"
             data-aos="fade-up"
           >
             <h2
-              class="text-xl font-black text-blue-900 uppercase mb-6 border-b pb-4"
+              class="text-lg md:text-xl font-black text-blue-900 uppercase mb-6 border-b pb-4"
             >
               Product Specifications
             </h2>
@@ -247,51 +271,66 @@
         </div>
         <div class="lg:col-span-1">
           <div
-            class="bg-white rounded-[2rem] border border-slate-100 p-8 shadow-sm h-full"
+            class="bg-white rounded-2xl md:rounded-[2rem] border border-slate-100 p-6 md:p-8 shadow-sm h-full"
             data-aos="fade-up"
             data-aos-delay="200"
           >
-            <h2 class="text-sm font-black text-blue-900 uppercase mb-6">
+            <h2
+              class="text-xs md:text-sm font-black text-blue-900 uppercase mb-6"
+            >
               About Product
             </h2>
             <p
               id="productDescription"
-              class="text-slate-500 text-sm leading-relaxed"
+              class="text-slate-500 text-xs md:text-sm leading-relaxed"
             ></p>
           </div>
         </div>
       </div>
 
-      <section class="pt-10 border-t border-slate-100" data-aos="fade-up">
+      <section
+        class="pt-10 border-t border-slate-100 mb-12 md:mb-16"
+        data-aos="fade-up"
+      >
         <div class="flex items-center justify-between mb-8">
           <div>
-            <h2 class="text-2xl font-black text-blue-900 uppercase">
+            <h2 class="text-xl md:text-2xl font-black text-blue-900 uppercase">
               Recommended Items
             </h2>
             <p
-              class="text-[10px] font-black text-orange-500 uppercase tracking-widest mt-1"
+              class="text-[9px] md:text-[10px] font-black text-orange-500 uppercase tracking-widest mt-1"
             >
               Similar Premium Solutions
             </p>
           </div>
-          <div class="flex space-x-2">
-            <button
-              onclick="scrollSlider(-1)"
-              class="w-10 h-10 rounded-full border border-slate-200 flex items-center justify-center hover:bg-blue-900 hover:text-white transition-all"
-            >
-              <i class="fas fa-chevron-left text-xs"></i>
-            </button>
-            <button
-              onclick="scrollSlider(1)"
-              class="w-10 h-10 rounded-full border border-slate-200 flex items-center justify-center hover:bg-blue-900 hover:text-white transition-all"
-            >
-              <i class="fas fa-chevron-right text-xs"></i>
-            </button>
-          </div>
         </div>
         <div
           id="recommendationSlider"
-          class="flex overflow-x-auto gap-6 pb-8 no-scrollbar scroll-smooth"
+          class="flex overflow-x-auto gap-4 md:gap-6 pb-6 no-scrollbar scroll-smooth"
+        ></div>
+      </section>
+
+      <section
+        id="brandSection"
+        class="pt-10 border-t border-slate-100 hidden"
+        data-aos="fade-up"
+      >
+        <div class="flex items-center justify-between mb-8">
+          <div>
+            <h2 class="text-xl md:text-2xl font-black text-blue-900 uppercase">
+              More From
+              <span id="brandNameSpan" class="text-orange-500">Brand</span>
+            </h2>
+            <p
+              class="text-[9px] md:text-[10px] font-black text-slate-400 uppercase tracking-widest mt-1"
+            >
+              Explore Full Manufacturer Catalog
+            </p>
+          </div>
+        </div>
+        <div
+          id="brandSlider"
+          class="flex overflow-x-auto gap-4 md:gap-6 pb-6 no-scrollbar scroll-smooth"
         ></div>
       </section>
     </main>
