--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -36,7 +36,6 @@
         background: #1e293b;
         border-radius: 10px;
       }
-      /* Initial Avatar Styling */
       .user-avatar {
         width: 40px;
         height: 40px;
@@ -55,6 +54,10 @@
       .user-avatar:hover {
         transform: scale(1.1);
         box-shadow: 0 4px 12px rgba(30, 58, 138, 0.2);
+      }
+      /* Hamburger Dropdown Animation */
+      #navDropdown.active {
+        display: flex !important;
       }
     </style>
   </head>
@@ -112,25 +115,35 @@
     >
       <div class="w-full px-6 py-4 flex flex-col gap-4">
         <div class="flex justify-between items-center">
+          <button
+            id="mobileMenuBtn"
+            class="lg:hidden text-blue-900 text-xl focus:outline-none"
+          >
+            <i class="fas fa-bars"></i>
+          </button>
+
           <div
             class="flex items-center space-x-4 cursor-pointer shrink-0"
             onclick="location.href = 'index.html'"
           >
             <img
               src="./images/logo.jpeg"
-              class="h-12 w-12 rounded-full border-2 border-orange-500 shadow-md"
+              class="h-10 w-10 md:h-12 md:w-12 rounded-full border-2 border-orange-500 shadow-md"
             />
             <div class="flex flex-col leading-none">
-              <span class="text-xl font-black text-blue-900">MISHRA</span>
+              <span class="text-lg md:text-xl font-black text-blue-900"
+                >MISHRA</span
+              >
               <span
-                class="text-[9px] font-extrabold tracking-[0.3em] text-orange-500 uppercase"
+                class="text-[8px] font-extrabold tracking-[0.3em] text-orange-500 uppercase"
                 >INDUSTRIES</span
               >
             </div>
           </div>
 
           <div
-            class="hidden lg:flex items-center space-x-8 text-xs font-black uppercase tracking-widest text-slate-600"
+            id="navDropdown"
+            class="hidden absolute top-full left-0 w-full bg-white border-b lg:border-none lg:static lg:flex lg:w-auto lg:items-center lg:space-x-8 text-xs font-black uppercase tracking-widest text-slate-600 flex-col lg:flex-row p-6 lg:p-0 space-y-4 lg:space-y-0 shadow-xl lg:shadow-none animate__animated animate__fadeIn"
           >
             <a href="index.html" class="hover:text-orange-500 transition"
               >Home</a
@@ -144,19 +157,16 @@
               class="hover:text-orange-500 transition"
               >Contact</a
             >
-
             <div id="authNavWrapper">
               <a
                 href="login.html"
                 class="flex items-center hover:text-orange-500 transition"
+                ><i class="far fa-user mr-2"></i> Login</a
               >
-                <i class="far fa-user mr-2"></i> Login
-              </a>
             </div>
-
             <a
               href="admin/admin-login.html"
-              class="bg-blue-50 text-blue-900 px-4 py-2 rounded-xl hover:bg-blue-900 hover:text-white transition"
+              class="bg-blue-50 text-blue-900 px-4 py-2 rounded-xl hover:bg-blue-900 hover:text-white transition text-center"
               >Admin Portal</a
             >
           </div>
@@ -194,11 +204,6 @@
               >
                 <i class="fas fa-microphone" id="micIcon"></i>
               </button>
-              <label
-                class="cursor-pointer text-slate-400 hover:text-blue-900 transition"
-                title="Visual Search"
-              >
-              </label>
             </div>
           </div>
         </div>
@@ -208,53 +213,47 @@
     <div
       class="bg-white border-b overflow-x-auto whitespace-nowrap px-6 py-4 no-scrollbar"
     >
-      <div class="bg-white border-b px-6 py-4 overflow-x-auto no-scrollbar">
-        <h3
-          class="text-[10px] font-black text-blue-900 uppercase tracking-widest mb-4"
+      <h3
+        class="text-[10px] font-black text-blue-900 uppercase tracking-widest mb-4"
+      >
+        Brands
+      </h3>
+      <div class="flex flex-nowrap gap-2">
+        <button
+          data-brand="All"
+          onclick="filterByBrand(this)"
+          class="filter-chip bg-blue-900 text-white active px-5 py-2 rounded-full border border-transparent text-[10px] font-black uppercase tracking-widest transition-all"
         >
-          Brands
-        </h3>
-        <div class="flex flex-nowrap gap-2">
-  <button
-    data-brand="All"
-    onclick="filterByBrand(this)"
-    class="filter-chip bg-blue-900 text-white active px-5 py-2 rounded-full border border-transparent text-[10px] font-black uppercase tracking-widest transition-all"
-  >
-    All
-  </button>
-
-  <button
-    data-brand="Siemens"
-    onclick="filterByBrand(this)"
-    class="filter-chip border-slate-100 text-slate-600 px-5 py-2 rounded-full border text-[10px] font-black uppercase tracking-widest transition-all"
-  >
-    Siemens
-  </button>
-
-  <button
-    data-brand="Anchor"
-    onclick="filterByBrand(this)"
-    class="filter-chip border-slate-100 text-slate-600 px-5 py-2 rounded-full border text-[10px] font-black uppercase tracking-widest transition-all"
-  >
-    Anchor
-  </button>
-
-  <button
-    data-brand="Havells"
-    onclick="filterByBrand(this)"
-    class="filter-chip border-slate-100 text-slate-600 px-5 py-2 rounded-full border text-[10px] font-black uppercase tracking-widest transition-all"
-  >
-    Havells
-  </button>
-
-  <button
-    data-brand="Polycab"
-    onclick="filterByBrand(this)"
-    class="filter-chip border-slate-100 text-slate-600 px-5 py-2 rounded-full border text-[10px] font-black uppercase tracking-widest transition-all"
-  >
-    Polycab
-  </button>
-</div>
+          All
+        </button>
+        <button
+          data-brand="Siemens"
+          onclick="filterByBrand(this)"
+          class="filter-chip border-slate-100 text-slate-600 px-5 py-2 rounded-full border text-[10px] font-black uppercase tracking-widest transition-all"
+        >
+          Siemens
+        </button>
+        <button
+          data-brand="Anchor"
+          onclick="filterByBrand(this)"
+          class="filter-chip border-slate-100 text-slate-600 px-5 py-2 rounded-full border text-[10px] font-black uppercase tracking-widest transition-all"
+        >
+          Anchor
+        </button>
+        <button
+          data-brand="Havells"
+          onclick="filterByBrand(this)"
+          class="filter-chip border-slate-100 text-slate-600 px-5 py-2 rounded-full border text-[10px] font-black uppercase tracking-widest transition-all"
+        >
+          Havells
+        </button>
+        <button
+          data-brand="Polycab"
+          onclick="filterByBrand(this)"
+          class="filter-chip border-slate-100 text-slate-600 px-5 py-2 rounded-full border text-[10px] font-black uppercase tracking-widest transition-all"
+        >
+          Polycab
+        </button>
       </div>
     </div>
 
@@ -271,41 +270,37 @@
             Categories
           </h3>
           <div class="space-y-4">
-            <label class="flex items-center space-x-3 cursor-pointer group">
-              <input
+            <label class="flex items-center space-x-3 cursor-pointer group"
+              ><input
                 type="checkbox"
                 value="Switches"
                 class="cat-check w-5 h-5 rounded border-slate-200 text-orange-500 focus:ring-0"
-              />
-              <span
+              /><span
                 class="text-sm font-bold text-slate-600 group-hover:text-blue-900"
                 >Switches</span
-              >
-            </label>
-            <label class="flex items-center space-x-3 cursor-pointer group">
-              <input
+              ></label
+            >
+            <label class="flex items-center space-x-3 cursor-pointer group"
+              ><input
                 type="checkbox"
                 value="Cables"
                 class="cat-check w-5 h-5 rounded border-slate-200 text-orange-500 focus:ring-0"
-              />
-              <span
+              /><span
                 class="text-sm font-bold text-slate-600 group-hover:text-blue-900"
                 >Cables</span
-              >
-            </label>
-            <label class="flex items-center space-x-3 cursor-pointer group">
-              <input
+              ></label
+            >
+            <label class="flex items-center space-x-3 cursor-pointer group"
+              ><input
                 type="checkbox"
                 value="Lighting"
                 class="cat-check w-5 h-5 rounded border-slate-200 text-orange-500 focus:ring-0"
-              />
-              <span
+              /><span
                 class="text-sm font-bold text-slate-600 group-hover:text-blue-900"
                 >Lighting</span
-              >
-            </label>
+              ></label
+            >
           </div>
-
           <div class="mt-10 pt-8 border-t border-slate-50">
             <h3
               class="text-[10px] font-black uppercase text-slate-400 tracking-widest mb-6"
@@ -323,8 +318,8 @@
             <div
               class="flex justify-between mt-4 text-[11px] font-black text-blue-900"
             >
-              <span>₹0</span>
-              <span id="priceDisplay" class="bg-blue-50 px-2 py-1 rounded"
+              <span>₹0</span
+              ><span id="priceDisplay" class="bg-blue-50 px-2 py-1 rounded"
                 >₹10,000</span
               >
             </div>
@@ -358,5 +353,21 @@
 
     <script src="js/cart.js"></script>
     <script src="js/shop.js"></script>
+    <script>
+      document
+        .getElementById("mobileMenuBtn")
+        .addEventListener("click", function () {
+          const menu = document.getElementById("navDropdown");
+          const icon = this.querySelector("i");
+          menu.classList.toggle("hidden");
+          menu.classList.toggle("active");
+          // Toggle icon between bars and times (X)
+          if (menu.classList.contains("active")) {
+            icon.classList.replace("fa-bars", "fa-times");
+          } else {
+            icon.classList.replace("fa-times", "fa-bars");
+          }
+        });
+    </script>
   </body>
 </html>
